[package]
name = "rk"
version = "0.1.0"
authors = ["dsbrgg <dsbrgg@gmail.com>"]
edition = "2018"

[dependencies]
aes-soft = "0.3.3"
block-modes = "0.3.3"
copypasta = "0.6.2"
clap = "2.33.0"
cli-table = "0.3"
crypto-hash = "0.3.4"
dialoguer = "0.5.0"
dirs = "2.0"
hex = "0.3.2"
rand = "^0.3"
regex = "1"
serde =  { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
